--- a/src/components/reauest-form/request-form.style.sass
+++ b/src/components/reauest-form/request-form.style.sass
@@ -25,6 +25,9 @@
             & figcaption
                 margin: -45px 0 0 40px
                 display: flex
+                &_imageView
+                    position: absolute
+                    z-index: 200
         &_card
             width: 360px
             height: 528px
