--- a/src/components/app/App.style.sass
+++ b/src/components/app/App.style.sass
@@ -1,3 +1,20 @@
+@font-face 
+  font-family: Gotham Pro
+  src: url(../../assets/fonts/14078.ttf)
+
+@font-face 
+  font-family: Open Sans
+  src: url(../../assets/fonts/opensans.ttf)
+
+@font-face 
+  font-family: Tahoma
+  src: url(../../assets/fonts/9688.ttf)
+
+@font-face 
+  font-family: Lato
+  src: url(../../assets/fonts/latoblack.ttf)
+
+
 .App 
   text-align: center
   
