content add, validate, adaptive

--- a/src/components/footer/footer.style.sass
+++ b/src/components/footer/footer.style.sass
@@ -5,7 +5,7 @@
         filter: grayscale(100%)
     &__office-card
         position: absolute
-        left: 1200px
+        right: 100px
         width: 384px
         height: 580px
         filter: drop-shadow(-4.086px 8.019px 31px rgba(55,55,55,0.17))
@@ -35,7 +35,7 @@
             line-height: 23px
             color: #0b0b0b
             font-family: "Tahoma"
-            margin: 0 70px
+            margin: 20px 70px
         &_mail
             display: flex
             align-items: center
@@ -46,7 +46,7 @@
             color: #0b0b0b
             font-family: "Tahoma"
             font-weight: bold
-            margin: 0 70px
+            margin: 20px 70px
         &_locate
             display: flex
             align-items: center
@@ -56,7 +56,7 @@
             line-height: 23px
             color: #0b0b0b
             font-family: "Tahoma"
-            margin: 0 70px
+            margin: 20px 70px
         &_clock
             display: flex
             align-items: center
@@ -66,11 +66,12 @@
             line-height: 23px
             color: #0b0b0b
             font-family: "Tahoma"
-            margin: 0 70px
+            margin: 20px 70px
     &__about
         background: #F4E8C3
         display: flex
         justify-content: space-around
+        margin: 20px 0
         &_inn
             font-size: 16px
             letter-spacing: 1px
