--- a/src/components/header/header.style.sass
+++ b/src/components/header/header.style.sass
@@ -1,9 +1,10 @@
 .header  
   height: 94px
   display: flex 
+  max-width: 1000px
   justify-content: space-between
   align-items: center
-  margin: 0 350px
+  margin: 0 auto
   background-color: #ffffff
   filter: drop-shadow(0px 1px 1.5px rgba(0,0,0,0.22))
   &__about
@@ -23,11 +24,11 @@
     display: flex
     flex-direction: column
   &__info_number
-    margin: 0 0 -10px 0
+    margin: 5px 0
     display: flex
     align-items: center
   &__info_mail
-    margin: -10px 0 0 0
+    margin: 5px 0
     display: flex
     align-items: center
 
