--- a/src/components/reauest-form/request-form.style.sass
+++ b/src/components/reauest-form/request-form.style.sass
@@ -1,7 +1,9 @@
 .request-form
+
+    max-width: 1000px
     filter: drop-shadow(0px 1px 1.5px rgba(0,0,0,0.22))
     background-color: #ffffff
-    margin: 20px 350px 20px 350px
+    margin: 20px auto
     display: flex 
     flex-direction: column
     &__title
@@ -17,8 +19,8 @@
             margin: 5px 0
     &__body
         display: flex
-        justify-content: space-around
-        margin: 0 0 40px 0
+        justify-content: space-between
+        margin: 0 10px 40px 10px
         &_house
             filter: drop-shadow(-7.718px 15.147px 24.5px rgba(0,0,1,0.14))
             background-color: #ffffff
@@ -67,7 +69,7 @@
                 color: #000000
                 font-family: "Gotham Pro"
             &_title
-                margin: 10px 53px
+                margin: 10px 30px
                 font-size: 16px
                 line-height: 30px
                 color: #000000
